--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start:client": "cd client && yarn start"
   },
   "dependencies": {
-    "npm-run-all": "4.1.5"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "npm-run-all": "4.1.5",
+    "react-script": "^2.0.5"
   }
-  
 }
