--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm-run-all": "4.1.5",
     "react-redux": "7.0.1",
     "react-script": "^2.0.5",
-    "redux": "4.0.1"
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0"
   }
 }
