--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "run-p install:*"
   },
   "dependencies": {
+    "axios": "0.18.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "npm-run-all": "4.1.5",
