--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "npm-run-all": "4.1.5",
+    "react-html-parser": "2.0.2",
     "react-redux": "7.0.1",
     "react-script": "^2.0.5",
     "redux": "4.0.1",
