--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "0.18.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-modules": "^1.0.1",
     "npm-run-all": "4.1.5",
+    "react": "^16.12.0",
     "react-html-parser": "2.0.2",
     "react-redux": "7.0.1",
     "react-script": "^2.0.5",
-    "redux": "4.0.1",
+    "redux": "^4.0.5",
     "redux-thunk": "2.3.0"
   }
 }
