--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "0.18.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "3.18.0",
     "node-modules": "^1.0.1",
     "npm-run-all": "4.1.5",
     "react": "^16.12.0",
