--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.17.1",
     "helmet": "3.18.0",
     "node-modules": "^1.0.1",
-    "npm-run-all": "4.1.5",
+    "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-html-parser": "2.0.2",
     "react-redux": "7.0.1",
