--- a/package.json
+++ b/package.json
@@ -14,16 +14,10 @@
     "postinstall": "run-p install:*"
   },
   "dependencies": {
-    "axios": "0.18.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "helmet": "3.18.0",
-    "node-modules": "^1.0.1",
-    "npm-run-all": "^4.1.5",
-    "react-html-parser": "2.0.2",
-    "react-redux": "7.0.1",
-    "react-script": "^2.0.5",
-    "redux": "^4.0.5",
-    "redux-thunk": "2.3.0"
+    "npm-run-all": "^4.1.5"
+    
+  },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^2.3.0"
   }
 }
