--- a/client/package.json
+++ b/client/package.json
@@ -3,23 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "animate.css": "^3.7.2",
-    "axios": "^0.19.1",
+    "axios": "0.18.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "3.18.0",
+    "animate.css": "3.7.0",
     "node-sass": "4.12.0",
     "react": "^16.12.0",
     "react-animated-css": "1.2.1",
     "react-dom": "^16.12.0",
-    "react-html-parser": "2.0.2",
     "react-icons": "3.7.0",
-    "react-redux": "7.0.1",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.3.0",
+    "react-html-parser": "2.0.2",
+    "react-redux": "7.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "2.3.0"
   },
