--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "cors": "2.8.5",
     "express": "4.17.0",
     "mongoose": "5.5.11",
-    "nodemon": "1.19.1"
+    "nodemon": "1.19.1",
+    "uuid": "3.3.2"
   },
   "scripts": {
     "start": "nodemon server.js"
