--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "3.7.0",
     "axios": "0.18.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "3.18.0",
-    "animate.css": "3.7.0",
     "node-sass": "4.12.0",
     "react": "^16.12.0",
     "react-animated-css": "1.2.1",
     "react-dom": "^16.12.0",
+    "react-html-parser": "2.0.2",
     "react-icons": "3.7.0",
+    "react-medium-editor": "1.8.1",
+    "react-redux": "7.0.1",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.3.0",
-    "react-html-parser": "2.0.2",
-    "react-redux": "7.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "2.3.0"
   },
