--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "cors": "2.8.5",
     "express": "4.17.0",
     "helmet": "3.18.0",
+    "mongo-sanitize": "^1.0.1",
     "mongoose": "5.5.11",
     "nodemon": "1.19.1",
     "uuid": "3.3.2"
